# batuta-cookbook

./: .bashrs.toml  .pmat-gates.toml  BASHRS_ENFORCEMENT.md  CONTRIBUTING.md  Cargo.toml  Makefile  PMAT_INTEGRATION.md  PROJECT_SETUP_COMPLETE.md  README.md  ROADMAP.md  pmat-quality.toml  pmat.toml  roadmap.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
.pmat/: context.db  deps-cache.json  project.toml
.pmat/context.idx/: functions.lz4  manifest.json
.pmat/metrics/: dependencies.json
benches/: recipe_performance.rs
docs/reviews/: TOYOTA_WAY_REVIEW_RESPONSE.md
docs/specifications/: cookbook-recipes-book.md
examples/: recipe_100_1_basic_analysis.rs  recipe_100_2_tdg_score.rs  recipe_100_3_dependency_detection.rs  recipe_100_4_analysis_report.rs  recipe_100_5_simple_transpilation.rs  recipe_200_1_multi_language.rs  recipe_200_2_incremental_transpilation.rs  recipe_200_3_custom_validation.rs  recipe_200_4_optimization_profiles.rs  recipe_200_5_batch_processing.rs  recipe_300_1_gpu_accelerated.rs  recipe_300_2_ast_manipulation.rs  recipe_300_3_semantic_transformations.rs  recipe_300_4_custom_codegen.rs  recipe_300_5_performance_profiling.rs  recipe_400_1_e2e_migration.rs  recipe_400_2_production_pipeline.rs  recipe_400_3_custom_language.rs  recipe_400_4_distributed.rs  recipe_400_5_ml_optimize.rs  recipe_500_1_banco_workbench.rs  recipe_500_2_banco_conversations.rs  recipe_500_3_banco_full_api.rs  recipe_500_4_banco_inference.rs  recipe_500_6_banco_training_workflow.rs  recipe_500_7_banco_quickstart.rs
examples/data/sample_python_project/: main.py
src/: analyzer.rs  lib.rs  optimizer.rs  transpiler.rs  types.rs  validator.rs
tests/: integration_test.rs
